--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "expo": "^24.0.0",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+    "react-native":
+      "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
     "react-native-elements": "^0.19.0",
     "react-navigation": "^1.0.0-beta.27",
     "striptags": "^3.1.1"
+  },
+  "rnpm": {
+    "assets": ["./assets/fonts/"]
   }
 }
